--- a/sourcemod/data/l4d2_melee_fatigue.cfg
+++ b/sourcemod/data/l4d2_melee_fatigue.cfg
@@ -1,7 +1,9 @@
 "melee_fatigue"
 {
-	// Specify additional melee delay between swings for specific meele weapons.
-	// Currently does not support 3rd party melee weapons, request in plugin post if required.
+	// Specify melee weapon script names and the additional delay between swings.
+	// Supports any melee weapon script name (including those from 3rd party maps).
+	// The time will also affect the next shove time after using a melee weapon.
+	// You can use negative numbers to reduce the delay between attacks.
 	"baseball_bat"
 	{
 		"time"		"0.0"
@@ -54,4 +56,32 @@
 	{
 		"time"		"0.0"
 	}
+
+	// Example using "Helms Deep" map melee weapon script names:
+	/* Remove this line if you want to use these:
+	"small_knife"
+	{
+		"time"		"0.0"
+	}
+	"helms_sword_and_shield"
+	{
+		"time"		"0.0"
+	}
+	"helms_hatchet"
+	{
+		"time"		"0.0"
+	}
+	"helms_sting"
+	{
+		"time"		"0.0"
+	}
+	"helms_anduril"
+	{
+		"time"		"0.0"
+	}
+	"helms_orcrist"
+	{
+		"time"		"0.0"
+	}
+	// */
 }
